k8s/bases/infrastructure/controllers/cert-manager/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    goldilocks.fairwinds.com/vpa-update-mode: "auto"
    goldilocks.fairwinds.com/vpa-min-replicas: "2"
